syntax = "proto3";
package fx.gravity.v1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/pundiai/fx-core/types/legacy/gravity";

// Deprecated: after upgrade v3
message MsgRequestBatch {
  string sender = 1;
  string denom = 2;
  string minimum_fee = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string fee_receive = 4;
  string base_fee = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// Deprecated: after upgrade v3
message MsgSetOrchestratorAddress {
  string validator = 1;
  string orchestrator = 2;
  string eth_address = 3;
}
